--- a/getting-started/prerequisites-installation/installation-cmake.mdx
+++ b/getting-started/prerequisites-installation/installation-cmake.mdx
@@ -1,331 +1,272 @@
 ---
-title: "Install with CMake"
-description: "Step-by-step guide for installing GoogleTest and GoogleMock using CMake—the recommended and most widely used approach. Includes download, build, and linking instructions, and highlights common pitfalls."
+title: "Installation: CMake"
+description: "Step-by-step guide for installing GoogleTest and GoogleMock using CMake, including configuration examples and best practices for integrating into your workflow."
 ---
 
-# Install with CMake: Step-by-Step Guide
+# Installation: CMake
 
-This guide leads you through the recommended and most widely used approach to install **GoogleTest** and **GoogleMock** using **CMake**. You'll learn how to download, build, install, and link these testing libraries, along with vital tips to avoid common pitfalls. Follow these steps to quickly and reliably integrate GoogleTest/GoogleMock into your C++ projects.
+This guide walks you through installing GoogleTest and GoogleMock using CMake, showing practical steps, configuration examples, and best practices for integrating these testing frameworks into your project workflow.
 
 ---
 
 ## 1. Prerequisites & System Requirements
 
-Before you begin, ensure you meet the following prerequisites:
+Before proceeding, ensure your environment meets the following:
 
-- **Operating System**: Linux, macOS, Windows.
-- **C++ Compiler**: Supports at least **C++17** standard.
-- **Build Tools**: 
-  - [CMake](https://cmake.org/) version 3.14 or higher.
-  - Compatible build tool such as Make, Ninja, Visual Studio, or Xcode.
-- **Network access**: To download GoogleTest source code if fetching automatically.
+- **CMake Version:** Minimum 3.16 for standalone builds; 3.14 or later is required for advanced features like `FetchContent`
+- **Compiler:** A C++17-compliant compiler (e.g., GCC 7+, Clang 3.4.1+, MSVC 2017 Update 3+)
+- **Operating System:** Any platform supported by CMake and your compiler
+- **Build Tools:** Make or Ninja for Unix-like systems; Visual Studio or Xcode on Windows and macOS respectively
+- **Network Access:** Required if fetching sources remotely (via Git or `FetchContent`)
 
-If you do not have CMake installed, refer to [CMake installation guide](https://cmake.org/install).
+<Tip>
+Ensure your project’s C++ standard is set to C++17 or higher, either by specifying in your project `CMakeLists.txt` or passing appropriate compiler flags.
+</Tip>
 
-<Check>
-Ensure your compiler is configured to support C++17. For example, with GCC or Clang pass `-std=c++17` or appropriate CMake variables.
-</Check>
+## 2. Installing GoogleTest and GoogleMock Using CMake
 
----
+### Option A: Standalone Build
+This method builds GoogleTest (and GoogleMock by default) independently.
 
-## 2. Downloading and Building GoogleTest and GoogleMock with CMake
-
-GoogleTest includes GoogleMock by default. You can build both together or opt to exclude GoogleMock.
-
-### 2.1 Clone the GoogleTest Repository
-
-Open your terminal and run:
+<Steps>
+<Step title="Clone the Repository">
+Open a terminal and clone the repository for the specific release version you want:
 
 ```bash
-git clone https://github.com/google/googletest.git -b main
-cd googletest
+git clone https://github.com/google/googletest.git -b v1.17.0
+downloads the GoogleTest v1.17.0 sources.
 ```
 
-This fetches the latest source code.
+Navigate into the cloned directory:
 
-### 2.2 Create a Build Directory
-
-Avoid building inside the source directory:
+```bash
+cd googletest
+```
+</Step>
+<Step title="Create and Navigate to a Build Directory">
+It's best practice to keep build files separate:
 
 ```bash
 mkdir build
 cd build
 ```
-
-### 2.3 Configure the Build with CMake
-
-- To build **both** GoogleTest and GoogleMock (default):
+</Step>
+<Step title="Generate Build Files with CMake">
+Generate native build scripts:
 
 ```bash
 cmake ..
 ```
+> This will enable GoogleMock by default.
 
-- To build **only GoogleTest** (excluding GoogleMock):
+If you want GoogleTest only, disable GoogleMock:
 
 ```bash
 cmake .. -DBUILD_GMOCK=OFF
 ```
+</Step>
+<Step title="Build the Project">
+On Unix-like systems (Linux/macOS), use `make`:
 
-This step prepares native build files tailored to your platform and compiler.
+```bash
+make
+```
 
-### 2.4 Build the Libraries
-
-Use your platform’s build command:
-
-- On Unix-like systems:
-
-  ```bash
-  make
-  ```
-
-- On Windows (Visual Studio):
-
-  Open the generated solution file in Visual Studio and build.
-
-- Using Ninja:
-
-  ```bash
-  ninja
-  ```
-
-### 2.5 (Optional) Install Libraries to System
-
-If you want to install GoogleTest/GoogleMock for system-wide usage:
+On Windows, open the generated Visual Studio solution file (e.g., `gtest.sln`) and build from the IDE.
+</Step>
+<Step title="Install the Libraries (Optional)">
+To install GoogleTest/GoogleMock system-wide (e.g., `/usr/local`), you need administrator permissions:
 
 ```bash
 sudo make install
 ```
 
-By default, this installs into `/usr/local`.
+The install location can be changed by passing `-DCMAKE_INSTALL_PREFIX=/your/custom/path` during the CMake configure step.
+</Step>
+</Steps>
 
 <Warning>
-Use `sudo make install` only if you have administrative rights and understand changes to system directories.
+Running `sudo make install` installs the libraries into system directories and may require admin rights. Adjust the install prefix if you want a local installation.
 </Warning>
 
----
+### Option B: Integrate GoogleTest into Your Existing CMake Project
 
-## 3. Linking GoogleTest into Your CMake Project
+If your project already uses CMake, there are two recommended methods:
 
-Integrate GoogleTest in your project either by linking to installed libraries or by incorporating GoogleTest source directly.
+#### 1. Using Installed GoogleTest Libraries
 
-### 3.1 Using Installed GoogleTest Libraries
-
-Add the following to your `CMakeLists.txt`:
+After installing GoogleTest and GoogleMock, import them using `find_package`:
 
 ```cmake
-find_package(GTest REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 
-add_executable(your_test_executable your_test_file.cc)
-target_link_libraries(your_test_executable PRIVATE GTest::gtest_main)
+add_executable(my_tests test_main.cpp)
+target_link_libraries(my_tests PRIVATE GTest::gtest_main GTest::gmock)
 enable_testing()
-add_test(NAME your_test COMMAND your_test_executable)
+add_test(NAME my_tests COMMAND my_tests)
 ```
 
-This approach assumes GoogleTest is installed and pkg-config information is correctly located.
+Ensure `CMAKE_PREFIX_PATH` or `PKG_CONFIG_PATH` includes the installation directory of GoogleTest for `find_package` and pkg-config to locate it.
 
-### 3.2 Using GoogleTest as a FetchContent Dependency
+#### 2. Building GoogleTest as Part of Your Project
 
-For an easy, self-contained setup that downloads GoogleTest at configure time:
+Embedding GoogleTest source into your project ensures consistent compile and link settings.
+
+Add the following snippet to your `CMakeLists.txt`:
 
 ```cmake
-cmake_minimum_required(VERSION 3.14)
-project(your_project)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 include(FetchContent)
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/main.zip
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
 )
-# For Windows: enable dynamic CRT compatibility
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)  # On Windows to match shared CRT usage
 FetchContent_MakeAvailable(googletest)
 
-add_executable(your_test_example your_test_file.cc)
-target_link_libraries(your_test_example PRIVATE gtest_main)
-
-enable_testing()
-include(GoogleTest)
-gtest_discover_tests(your_test_example)
+add_executable(example example.cpp)
+target_link_libraries(example PRIVATE gtest_main gmock)
+add_test(NAME example_test COMMAND example)
 ```
 
-This method ensures consistent build settings and easy version upgrades.
+Note: This requires CMake 3.14 or newer.
 
----
+<Tip>
+Use the `gtest_force_shared_crt` option on Windows to resolve runtime library conflicts between GoogleTest and your project.
+</Tip>
 
-## 4. Common Pitfalls and Troubleshooting
+## 3. Configuration & Build Options
 
-### 4.1 pkg-config Can't Find GoogleTest
+GoogleTest’s CMake scripts provide options to customize your build:
 
-If you get errors like:
+| Option                 | Default | Description                                         |
+|------------------------|---------|-----------------------------------------------------|
+| `BUILD_GMOCK`          | ON      | Build GoogleMock along with GoogleTest              |
+| `INSTALL_GTEST`        | ON      | Enable installation targets (use OFF if embedding) |
+| `gtest_force_shared_crt`| OFF     | Use shared runtime libraries on Windows             |
+| `gtest_build_tests`    | OFF     | Build GoogleTest’s own tests                         |
+| `gtest_disable_pthreads`| OFF    | Disable pthread usage (rarely needed)               |
 
-```
-CMake Error at FindPkgConfig.cmake:XXX (message):
-  None of the required 'gtest_main' found
-```
+You can toggle these by passing `-D<option>=ON/OFF` to CMake.
 
-It usually means pkg-config cannot locate the `.pc` files. 
+### Compiler and Linker Settings
 
-To fix this, set the `PKG_CONFIG_PATH` environment variable to point to the directory containing GoogleTest pkg-config files:
+GoogleTest enforces certain compiler flags internally for best compatibility. You generally don’t need to modify these unless fixing specific build issues. It requires C++17 and prefers static CRT on Windows unless overridden.
 
-```bash
-export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
-```
+## 4. Running Your First Operation
 
-Adjust the path to your actual install prefix.
+Once built and installed, validate your installation by compiling and running a simple test executable.
 
-### 4.2 Cross-Compilation Considerations
-
-If cross-compiling, set the following variables so pkg-config uses paths relative to your sysroot:
-
-```bash
-export PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=yes
-export PKG_CONFIG_ALLOW_SYSTEM_LIBS=yes
-export PKG_CONFIG_DIR=
-export PKG_CONFIG_SYSROOT_DIR=/path/to/sysroot
-export PKG_CONFIG_LIBDIR=${PKG_CONFIG_SYSROOT_DIR}/usr/lib64/pkgconfig
-```
-
-Otherwise, `pkg-config` may report incorrect include and library paths.
-
-### 4.3 Visual Studio Runtime Library Mismatch
-
-By default, GoogleTest links the C runtime statically, but Visual Studio projects may link it dynamically, causing linker errors like:
-
-```
-gtest.lib(gtest-all.obj) : error LNK2038: mismatch detected for 'RuntimeLibrary'
-```
-
-Fix this by enabling `gtest_force_shared_crt` in your `CMakeLists.txt`:
-
-```cmake
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-```
-
-This forces GoogleTest to use the dynamic runtime and matches your project.
-
-### 4.4 Compiler Support for C++17
-
-GoogleTest requires at least C++17. Ensure you specify this in your CMake file:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-If your compiler does not support C++17, upgrade or switch to a compatible compiler.
-
----
-
-## 5. Verifying Your GoogleTest Installation
-
-Create a simple test file named `hello_test.cc`:
+### Example: Minimal Test
+Create `example.cpp`:
 
 ```cpp
 #include <gtest/gtest.h>
 
-TEST(HelloTest, BasicAssertions) {
-  EXPECT_STRNE("hello", "world");
-  EXPECT_EQ(7 * 6, 42);
+TEST(SampleTest, AssertTrue) {
+  ASSERT_TRUE(true);
+}
+
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
 
-Update your `CMakeLists.txt` to build and run this test:
-
-```cmake
-enable_testing()
-
-add_executable(hello_test hello_test.cc)
-target_link_libraries(hello_test PRIVATE GTest::gtest_main)
-
-include(GoogleTest)
-gtest_discover_tests(hello_test)
-```
-
-Build and run:
+Build and link this with GoogleTest:
 
 ```bash
-cmake -S . -B build
-cmake --build build
-cd build
-ctest
+cmake ..
+make example
+./example
 ```
 
 Expected output:
 
 ```
-Test project /path/to/build
-    Start 1: HelloTest.BasicAssertions
-1/1 Test #1: HelloTest.BasicAssertions ........   Passed    0.00 sec
+[==========] Running 1 test from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 1 test from SampleTest
+[ RUN      ] SampleTest.AssertTrue
+[       OK ] SampleTest.AssertTrue
+[----------] 1 test from SampleTest (0 ms total)
 
-100% tests passed, 0 tests failed out of 1
+[==========] 1 test from 1 test suite ran. (0 ms total)
+[  PASSED  ] 1 test.
 ```
 
-Congratulations, you have successfully installed and run your first test using GoogleTest with CMake!
+This confirms GoogleTest is installed and functioning.
 
----
+## 5. Best Practices & Tips
 
-## 6. Next Steps
-
-- Explore [GoogleTest Primer](primer.md) for writing more advanced tests.
-- Examine [Core Workflow Guides](guides/core-workflows/) to master assertions and mocking.
-- Visit [Test Discovery & Execution](getting-started/first-test-setup/test-discovery-execution) for automating your test suite.
-- Consult [Common Issues Troubleshooting](getting-started/validation-troubleshooting/common-issues) if you encounter build or run errors.
-
----
-
-## Appendix: Sample Minimal `CMakeLists.txt` to Build and Link GoogleTest
+- **Use `add_subdirectory` for consistency:** Embedding GoogleTest in your project with `add_subdirectory` ensures consistency in compiler settings and library linkage.
+- **Control runtime linkage on Windows:** Use `gtest_force_shared_crt` to avoid runtime mismatches.
+- **Enable multi-threaded support explicitly if needed:** Set `-DGTEST_HAS_PTHREAD=1` if your environment does not autodetect pthread support.
+- **Use standard C++17 in your `CMakeLists.txt`:**
 
 ```cmake
-cmake_minimum_required(VERSION 3.14)
-project(my_project)
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/main.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(my_test hello_test.cc)
-
-target_link_libraries(my_test PRIVATE gtest_main)
-
-enable_testing()
-include(GoogleTest)
-gtest_discover_tests(my_test)
 ```
 
-Replace `hello_test.cc` with your own test source file(s).
+- **Disable building GoogleTest’s own tests unless needed:** It saves build time.
 
----
+## 6. Troubleshooting Common Issues
 
-## Tips
+<AccordionGroup title="Troubleshooting Common Setup Issues">
+<Accordion title="CMake cannot find GoogleTest or GoogleMock">
+Verify `CMAKE_PREFIX_PATH` includes the install directory of GoogleTest. If using pkg-config, ensure `PKG_CONFIG_PATH` points to the directory containing the `.pc` files.
 
-- Always build GoogleTest with the same compiler and compiler flags as your project to avoid ABI incompatibilities.
-- Prefer `FetchContent` method for simpler dependency management within CMake projects.
-- Use `target_compile_options` and `target_link_libraries` to propagate necessary compile and link flags.
+Example:
 
-## Summary
-This page detailed a straightforward, practical approach to installing GoogleTest and GoogleMock with CMake, highlighting key steps from prerequisite checks through to verification and linking in your projects. Careful attention to environment setup, compiler requirements, and troubleshooting tips ensures a smooth experience incorporating GoogleTest into your C++ workflows.
-
-
----
-
-<AccordionGroup title="Additional Resources">
-<Accordion title="Official GoogleTest Repository">
-https://github.com/google/googletest
+```bash
+export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
+```
 </Accordion>
-<Accordion title="CMake FetchContent Documentation">
-https://cmake.org/cmake/help/latest/module/FetchContent.html
+<Accordion title="Runtime library mismatch on Windows (LNK2038 error)">
+This occurs when GoogleTest and your project use different CRT linkage.
+
+- Enable the option `gtest_force_shared_crt` by adding `-Dgtest_force_shared_crt=ON` when configuring with CMake.
+- Ensure your project uses the same runtime linkage.
 </Accordion>
-<Accordion title="Common Issues & Troubleshooting">
-See the [Troubleshooting Common Issues](getting-started/validation-troubleshooting/common-issues) page.
+<Accordion title="Linker errors related to pthread">
+If you see missing pthread symbols:
+
+- Use GoogleTest's CMake support which handles pthread linking automatically.
+- If manually linking, add `-pthread` to your compile and link flags.
+- To force pthread usage, add `-DGTEST_HAS_PTHREAD=1` to compiler flags.
+</Accordion>
+<Accordion title="Using GoogleTest as a shared library issues">
+If building or linking shared GoogleTest libs:
+
+- Add `-DGTEST_CREATE_SHARED_LIBRARY=1` to compile flags when building GoogleTest.
+- Add `-DGTEST_LINKED_AS_SHARED_LIBRARY=1` when compiling tests.
+- Ensure your system supports shared libraries properly.
 </Accordion>
 </AccordionGroup>
+
+## 7. Additional Resources
+
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — Quick start for writing tests
+- [GoogleMock README](googlemock/README.md) — Details on integrating GoogleMock
+- [Building and Integration](overview/integration-ecosystem/integration-with-build-and-ci) — Covers CMake specifics and CI setup
+- [System Requirements](getting-started/prerequisites-installation/system-requirements) — To verify environment compatibility
+
+---
+
+By following these steps and tips, you will have GoogleTest and GoogleMock installed via CMake and ready to seamlessly integrate into your C++ project testing workflow.
+
+
+---
+
+<Note>
+For comprehensive understanding, visit the main [GoogleTest README](googletest/README.md) for detailed explanations of build options and customizations.
+</Note>
+
+<Check>
+Always verify your build environment meets the C++17 standard and CMake version requirements before starting.
+</Check>
+
+---
+
+# End of Installation Guide
+
