--- a/getting-started/prerequisites-installation/manual-installation.mdx
+++ b/getting-started/prerequisites-installation/manual-installation.mdx
@@ -1,178 +1,151 @@
 ---
-title: "Manual Installation & Source Build"
-description: "Instructions for manually building and incorporating GoogleTest into projects where CMake or Bazel are not an option. Walks users through downloading, compiling, and linking the library by hand."
+title: "Manual Installation & Source Integration"
+description: "Outline of how to integrate GoogleTest and GoogleMock directly into your project source tree, for users requiring custom or advanced setups."
 ---
 
-# Manual Installation & Source Build
+# Manual Installation & Source Integration
 
-This guide provides clear instructions for manually downloading, building, and integrating GoogleTest into your projects when automated tools like CMake or Bazel are not an option. Follow these steps to compile the GoogleTest source code and link the resulting libraries by hand.
+This guide explains how to directly integrate GoogleTest and GoogleMock into your project source tree without relying on package managers or external pre-built binaries. This method is intended for users who need customized setups, advanced configurations, or have specific build system requirements that preclude standard installation mechanisms.
 
 ---
 
 ## 1. Prerequisites & System Requirements
 
-- **Operating System:** Compatible with Linux, macOS, Windows, and others supporting standard build tools
-- **Compiler:** A C++17-compliant compiler (e.g., GCC 7+, Clang 6+, MSVC 2017+)
-- **Build Tools:** Basic tools such as `make`, `ninja`, or your system's compiler build commands
-- **Permissions:** Read and write access in your build and install directory
+- **Supported Platforms:** GoogleTest and GoogleMock support major platforms including Linux, Windows, and macOS. Ensure your environment supports a modern C++ compiler compatible with at least C++11.
+- **Compiler Requirements:** Minimum compilers supported are GCC 7+, Clang 3.4.1+, or MSVC 2017 Update 3+. Ensure your compiler fully supports C++11 or later.
+- **Build System:** Familiarity with your project's build system is required to integrate the source code directly. GoogleTest uses CMake as its primary build system, but you can integrate the sources manually as well.
 
-<Tip>
-Having the latest stable release of your compiler and build tools ensures smoother compilation and fewer compatibility issues.
-</Tip>
+## 2. Source Tree Integration
 
-## 2. Downloading the GoogleTest Source
+### Step 1: Download the Source
 
-You need to fetch the GoogleTest source code manually.
-
-### Step 1: Clone or Download from GitHub
-
-Using Git:
+You must obtain the GoogleTest and GoogleMock source code directly. You can clone the full googletest repository which includes both:
 
 ```bash
-# Clone the repository (for stable releases, replace with a tag or branch as needed)
 git clone https://github.com/google/googletest.git
-cd googletest
 ```
 
-Or download the ZIP archive from GitHub:
+This repository contains the source code under the `googletest/` and `googlemock/` directories.
 
-- <https://github.com/google/googletest/archive/refs/heads/main.zip>
+### Step 2: Place Sources into Your Project
 
-Unpack the archive and navigate into the extracted `googletest` directory.
+Decide on a location within your project's source tree to include the GoogleTest sources. Common options:
 
-<Tip>
-Ensure your network or proxy setup allows you to reach GitHub or download archives.
-</Tip>
+- `third_party/googletest/`
+- `external/gtest/`
 
-## 3. Building GoogleTest Manually
+Copy the following directories into your project source structure:
 
-In the absence of CMake or Bazel, you can build GoogleTest by compiling the source files directly.
+- `googletest/include/`
+- `googletest/src/`
+- `googlemock/include/`
+- `googlemock/src/`
 
-### Step 1: Locate Source Files
+You do **not** need to build GoogleTest or GoogleMock as standalone libraries if you compile the sources as part of your project.
 
-GoogleTest's main source files are in the following directories:
+### Step 3: Add Source Files to Your Build
 
-- `googletest/src`
-- `googlemock/src` (included with GoogleTest repository, if you want GoogleMock)
+Include the GoogleTest and GoogleMock sources as part of your build targets.
 
-### Step 2: Compile Source Files into Object Files or Static Libraries
+Example with CMake (assuming your root is `third_party/googletest`):
 
-You can create static libraries (`.a` or `.lib`) for reuse.
+```cmake
+add_subdirectory(third_party/googletest)
 
-Using GCC or Clang (Linux/macOS):
-
-```bash
-# Compile GoogleTest sources
-clang++ -std=c++17 -isystem googletest/include -isystem googlemock/include -Igoogletest -Igooglemock -c googletest/src/gtest-all.cc
-clang++ -std=c++17 -isystem googletest/include -isystem googlemock/include -Igoogletest -Igooglemock -c googlemock/src/gmock-all.cc
-
-# Create static libraries
-ar rcs libgtest.a gtest-all.o
-ar rcs libgmock.a gmock-all.o
+target_link_libraries(your_test_target PRIVATE gtest gmock)
 ```
 
-Using MSVC (Windows) from Developer Command Prompt:
+If your build system does not support `add_subdirectory`, add source files manually:
 
-```batch
-cl /EHsc /I googletest/include /I googlemock/include /I googletest /I googlemock /c googletest\src\gtest-all.cc
-lib /OUT:gtest.lib gtest-all.obj
-cl /EHsc /I googletest/include /I googlemock/include /I googletest /I googlemock /c googlemock\src\gmock-all.cc
-lib /OUT:gmock.lib gmock-all.obj
+- For GoogleTest:
+  - `googletest/src/gtest-all.cc`
+- For GoogleMock:
+  - `googlemock/src/gmock-all.cc`
+
+Include the corresponding headers `googletest/include` and `googlemock/include` in your include paths.
+
+### Step 4: Using GoogleMock Main Target
+
+If you want a ready-made `main()` function to run your tests, use the `gmock_main` target. It links GoogleMock and GoogleTest and provides a default `main()`.
+
+With CMake:
+
+```cmake
+find_package(GTest REQUIRED)
+add_executable(your_tests your_tests.cc)
+target_link_libraries(your_tests PRIVATE gmock_main)
 ```
 
-### Step 3: Link Your Test Executable
+If integrating manually, link with the compiled `gmock_main` object.
 
-When linking your test program, include these libraries and link against pthread (Linux/macOS) if necessary:
+## 3. Customizing Your Integration
 
-```bash
-clang++ -std=c++17 your_test.cc -Lpath/to/libs -lgtest -lgmock -lpthread -o your_test
-```
+- You can modify or patch the GoogleTest and GoogleMock sources if your project requires adaptation to internal policies or environment.
+- For any changes, maintain synchronization with upstream updates.
 
-Or with MSVC (adjust paths and names accordingly):
+## 4. Verification and Running Tests
 
-```batch
-cl /EHsc your_test.cc gtest.lib gmock.lib
-```
+After integration:
 
-<Tip>
-Make sure the include paths match the location of header files in your build commands.
-</Tip>
+- Compile your project, ensuring that GoogleTest and GoogleMock sources are built without errors.
+- Write your tests using GoogleTest and GoogleMock APIs.
+- Link your test executables with `gmock` or `gmock_main` as needed.
+- Run your tests as normal executables.
 
-## 4. Linking GoogleTest Without CMake or Bazel
+## 5. Best Practices & Tips
 
-When manually configuring your project or IDE:
+- Keep GoogleTest and GoogleMock sources updated regularly to benefit from bug fixes and features.
+- Avoid mixing manual source integration with package manager versions to prevent conflicts.
+- If you experience issues with multiple definitions or linkage errors, ensure that GoogleTest/GoogleMock sources are included only once per build.
+- Use `gmock_main` when possible to simplify the test executable setup.
 
-- Add `googletest/include` and `googlemock/include` (if using GoogleMock) to your project's include directories.
-- Add the compiled static libraries (`libgtest.a`, `libgmock.a` or their equivalents) to your linker's input.
-- Link necessary platform libraries:
-  - On POSIX systems, add `-lpthread`.
-  - On Windows, ensure the relevant system libraries are linked.
+## 6. Troubleshooting
 
-## 5. Running Your First Test
-
-Once built and linked, running your test executable should execute your GoogleTest tests and output results to the console.
-
-```bash
-./your_test
-```
-
-You should see output similar to:
-
-```
-[==========] Running 1 test from 1 test case.
-[----------] Global test environment set-up.
-[ RUN      ] ExampleTest.DoesFoo
-[       OK ] ExampleTest.DoesFoo (0 ms)
-[----------] 1 test from ExampleTest (0 ms total)
-[----------] Global test environment tear-down
-[==========] 1 test from 1 test case ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-## 6. Troubleshooting Common Issues
-
-<AccordionGroup title="Manual Build Troubleshooting">
-<Accordion title="Compilation Errors Related to C++ Standard">
-<p>If you encounter errors about unsupported features or unknown flags, confirm that your compiler supports at least C++17. Upgrade your compiler if necessary or specify the proper flags (`-std=c++17`).</p>
+<AccordionGroup title="Common Issues When Integrating GoogleTest/GoogleMock from Source">
+<Accordion title="Include Path Not Found or Header Errors">
+Ensure you are including both `googletest/include` and `googlemock/include` directories in your compiler's include paths. Missing these will cause compilation errors.
 </Accordion>
-<Accordion title="Missing Pthread on Linux/macOS">
-<p>If linking fails with pthread-related errors, ensure to add <code>-lpthread</code> to your linker command.</p>
+<Accordion title="Linker Errors about Undefined References to gTest or gMock Symbols">
+Verify that the source files `gtest-all.cc` and `gmock-all.cc`, or respective libraries, are compiled and linked into your test target.
 </Accordion>
-<Accordion title="Include Path Errors">
-<p>Errors about missing headers usually indicate incorrect include paths. Double-check that your compile commands use the correct relative or absolute paths to the <code>googletest/include</code> and <code>googlemock/include</code> folders.</p>
+<Accordion title="Multiple Definition Errors in Linking">
+This problem may arise if GoogleTest and GoogleMock sources are included multiple times or mixed with precompiled libraries. Double-check your build setup to avoid duplicate linkage.
 </Accordion>
-<Accordion title="Linker Cannot Find GoogleTest Libraries">
-<p>Make sure the compiled static libraries are correctly named and placed in directories the linker searches. Use the <code>-L</code> flag on Unix-like systems or adjust Visual Studio library paths on Windows.</p>
-</Accordion>
-<Accordion title="Tests Do Not Run or No Output Shown">
-<p>Verify that your test source code either registers test cases with GoogleTest or uses the standard <code>TEST/TEST_F</code> macros. Also ensure your test executable runs without immediate crashes and standard output is visible.</p>
+<Accordion title="Tests Not Running or Reporting Zero Tests">
+Confirm that your test executable links with the correct `gmock_main` or that you provide your own `main()`. Also, check that your test discovery macros (e.g., `TEST()`, `TEST_F()`) are visible and not excluded.
 </Accordion>
 </AccordionGroup>
 
-## 7. Best Practices & Tips
+## 7. Getting Help
 
-- If your project grows complex, consider migrating to CMake or Bazel to benefit from build automation.
-- When compiling manually, keep track of compiler and linker flags matching your project configuration.
-- Consider building GoogleTest as a shared or static library once for your environment and reusing it.
-- Verify GoogleTest and your test are built with the same compiler settings (e.g., debug vs release) to avoid ABI incompatibilities.
+- Consult the [official GoogleTest documentation](https://github.com/google/googletest) and [GoogleMock documentation](https://google.github.io/googletest/gmock_for_dummies.html) for examples and details.
+- Review the available [reference pages for mocking](docs/reference/mocking.md) and the [gMock Cookbook](docs/gmock_cook_book.md) for advanced examples.
+- For community help, try forums, issue trackers, or [community-created documentation](docs/community_created_documentation.md).
 
-<Tip>
-A manual build setup is suitable for simple or legacy environments, but take care to maintain consistent build configurations across your project.
-</Tip>
 
 ---
 
-For further guidance on using GoogleTest, consult the official [GoogleTest User's Guide](primer.md) and [Getting Started Guides](https://github.com/google/googletest/tree/main/docs/getting-started).
+## Summary
+
+Direct source integration requires careful handling of source placement, build system configuration, and ensure compilation/linkage of GoogleTest and GoogleMock source files alongside your project. When done correctly, this provides maximum control and flexibility for custom or advanced testing setups.
+
 
 ---
 
-## Related Documentation and Resources
+**Note:** For users preferring automated installation methods, consult the CMake or Bazel installation guides.
 
-- [GoogleTest Primer](primer.md) — Start writing simple tests.
-- [Installation with CMake](installation-cmake.md) — Recommended for automated builds.
-- [Installation with Bazel](installation-bazel.md) — For Bazel build environments.
-- [GoogleMock for Dummies](gmock_for_dummies.md) — Learn mocking concepts.
-- Official GitHub Repository: <https://github.com/google/googletest>
+---
 
+#### Additional Resources
 
+- [GoogleTest Primer](overview/about-googletest/what-is-googletest)
+- [GoogleMock for Dummies](docs/gmock_for_dummies.md)
+- [Mocking Reference](docs/reference/mocking.md)
+- [gMock Cookbook](docs/gmock_cook_book.md)
+- [gMock Cheat Sheet](docs/gmock_cheat_sheet.md)
+- [Troubleshooting Common Setup Issues](getting-started/validation-troubleshooting/common-issues)
+- [Integration with Build Tools and CI](overview/integration-ecosystem/integration-with-build-and-ci)
 
+----
+
+<Source url="https://github.com/google/googletest" paths={[{path: "googletest/include"},{path: "googletest/src/gtest-all.cc"},{path: "googlemock/include"},{path: "googlemock/src/gmock-all.cc"}]} />
